--- a/ToDoRealm/Base.lproj/Main.storyboard
+++ b/ToDoRealm/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rYZ-zv-LTV">
-                                <rect key="frame" x="0.0" y="140" width="414" height="756"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -47,18 +47,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bF5-wD-1sL">
-                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Todo" id="I04-gp-zV9">
                         <leftBarButtonItems>
-                            <barButtonItem systemItem="edit" id="Crs-Ji-avA">
+                            <barButtonItem title="Item" id="Crs-Ji-avA">
                                 <connections>
                                     <action selector="edit" destination="BYZ-38-t0r" id="5TO-Iy-h1L"/>
                                 </connections>
@@ -78,7 +73,6 @@
                     <connections>
                         <outlet property="doneButton" destination="WKu-8S-p4n" id="DO5-YE-Kf7"/>
                         <outlet property="editButton" destination="Crs-Ji-avA" id="b1a-MR-qeB"/>
-                        <outlet property="searchBar" destination="bF5-wD-1sL" id="8nl-Rj-JrE"/>
                         <outlet property="titleTable" destination="rYZ-zv-LTV" id="ntG-WL-xnn"/>
                     </connections>
                 </viewController>
